# training_django

./: .gitignore  Makefile  pyproject.toml
training_django_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
training_django_project/article/: apps.py  urls.py  views.py
training_django_project/templates/: base.html  index.html
training_django_project/templates/articles/: index.html
