[tool.poetry]
name = "training-project"
version = "0.1.0"
description = ""
authors = ["Евгений Прутян <buivan.proger@gmail.com>"]
readme = "README.md"
packages = [{include = "training_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
